# topos

./: ARCHITECTURE.md  CHANGELOG.md  CONTEXT_COMPILER.md  Cargo.toml  EXAMPLES.md  EXECUTION_PLAN.md  HANDOFF_GRAMMAR.md  LANGUAGE_SPEC.md  PROJECT_STRUCTURE.md  README.md  TYPED_HOLES.md
.beads/: beads.jsonl
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
conductor/tracks/core_grammar_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/lsp_skeleton_20251220/: metadata.json  plan.md  spec.md
crates/topos-analysis/: Cargo.toml
crates/topos-analysis/src/: anchors.rs  db.rs  diagnostics.rs  foreign.rs  holes.rs  lib.rs  polyglot.rs  resolve.rs  symbols.rs  traceability.rs
crates/topos-cli/: Cargo.toml
crates/topos-cli/src/: main.rs
crates/topos-cli/tests/: cli_integration.rs
crates/topos-context/: Cargo.toml
crates/topos-context/src/: lib.rs
crates/topos-diff/: Cargo.toml
crates/topos-diff/src/: lib.rs  semantic.rs  strategy.rs
crates/topos-lsp/: Cargo.toml
crates/topos-lsp/src/: lib.rs
crates/topos-mcp/: Cargo.toml
crates/topos-mcp/examples/: suggest_hole.rs
crates/topos-mcp/src/: client.rs  lib.rs  llm.rs
crates/topos-syntax/: Cargo.toml
crates/topos-syntax/src/: ast.rs  format.rs  lib.rs  parser.rs  proptest_support.rs  span.rs
docs/guide/: cli-reference.md  getting-started.md  language-reference.md  workflow.md
docs/guide/examples/: README.md  auth.tps  orders.tps
editors/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/snippets/: topos.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: topos.tmLanguage.json
examples/: README.md  auth.tps  auth_v2.tps
tree-sitter-topos/: Cargo.toml  build.rs  debug.tps  grammar.js  package.json  tree-sitter.json
tree-sitter-topos/bindings/rust/: lib.rs
tree-sitter-topos/queries/: highlights.scm
tree-sitter-topos/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-topos/test/corpus/: requirements_concepts.txt  sections.txt  tasks_holes.txt
