# Topos Workspace Configuration
# 
# This is the root Cargo.toml for the Topos toolchain.
# All crates in the workspace share these dependency versions.

[workspace]
resolver = "2"
members = [
    "crates/topos-syntax",
    "crates/topos-analysis",
    "crates/topos-diff",
    "crates/topos-context",
    "crates/topos-lsp",
    "crates/topos-mcp",
    "crates/topos-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/your-org/topos"
authors = ["Topos Contributors"]
description = "A semantic contract language for human-AI collaboration"
keywords = ["specification", "lsp", "ai", "mcp", "typed-holes"]
categories = ["development-tools", "text-editors"]

[workspace.dependencies]
# ============================================================================
# REFLECTION & SERIALIZATION (facet.rs ecosystem)
# ============================================================================
facet = "0.32"                    # Core reflection trait and derive macro
facet-core = "0.32"               # Core types (Shape, Field, etc.)
facet-reflect = "0.32"            # Peek (read) and Partial (construct) APIs
facet-json = "0.32"               # JSON serialization
facet-yaml = "0.32"               # YAML serialization
facet-toml = "0.32"               # TOML serialization
facet-pretty = "0.32"             # Colored pretty-printing with redaction
facet-assert = "0.32"             # Structural comparison for tests

# ============================================================================
# INCREMENTAL COMPUTATION (Salsa)
# ============================================================================
salsa = "0.25"                    # Core incremental computation framework

# ============================================================================
# PARSING (tree-sitter)
# ============================================================================
tree-sitter = "0.25"              # Core parser runtime
tree-sitter-topos = { path = "tree-sitter-topos" }  # Generated grammar

# ============================================================================
# LANGUAGE SERVER PROTOCOL
# ============================================================================
tower-lsp = "0.20"                # LSP server framework
lsp-types = "0.94"                # LSP type definitions (compatible with tower-lsp)

# ============================================================================
# MODEL CONTEXT PROTOCOL (rmcp)
# ============================================================================
rmcp = { version = "0.12", features = ["server"] }   # MCP server SDK
rmcp-macros = "0.12"               # Tool definition macros

# ============================================================================
# TEXT HANDLING
# ============================================================================
ropey = "1.6"                     # Rope data structure for text editing
codespan-reporting = "0.11"       # Pretty diagnostic rendering

# ============================================================================
# ASYNC RUNTIME
# ============================================================================
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# ============================================================================
# COMMAND LINE
# ============================================================================
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
colored = "2.1"                   # Terminal colors
ratatui = "0.29"                  # TUI library

# ============================================================================
# TESTING
# ============================================================================
insta = { version = "1.40", features = ["json", "yaml"] }  # Snapshot testing
proptest = "1.5"                  # Property-based testing

# ============================================================================
# UTILITIES
# ============================================================================
thiserror = "2.0"                 # Derive Error trait
anyhow = "1.0"                    # Flexible error handling
tracing = "0.1"                   # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"                # Lazy static initialization
parking_lot = "0.12"              # Fast synchronization primitives
dashmap = "6.0"                   # Concurrent hashmap
indexmap = "2.2"                  # Insertion-ordered hashmap
smol_str = "0.2"                  # Small string optimization
url = "2.5"                       # URL parsing
walkdir = "2.5"                   # Directory traversal
notify = "6.1"                    # File system watching
toml = "0.8"                      # TOML parsing (for topos.toml config)
lance = "0.14"                    # Vector search

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# ============================================================================
# PROFILE CONFIGURATION
# ============================================================================

[profile.dev]
# Faster incremental builds for development
incremental = true

[profile.release]
# Optimize for size and speed
lto = "thin"
codegen-units = 1
strip = true

[profile.release-debug]
# Release with debug symbols for profiling
inherits = "release"
debug = true
strip = false