[package]
name = "topos-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Semantic analysis and query engine for Topos"

[dependencies]
salsa.workspace = true
topos-syntax = { path = "../topos-syntax" }
facet-core.workspace = true
tree-sitter-topos = { path = "../../tree-sitter-topos" }
tree-sitter.workspace = true
tree-sitter-typescript = "0.23"
regex = "1.10"

[dev-dependencies]
proptest.workspace = true

