[package]
name = "topos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for Topos"

[[bin]]
name = "topos"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
topos-lsp = { path = "../topos-lsp" }
topos-mcp = { path = "../topos-mcp" }
topos-analysis = { path = "../topos-analysis" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
