[package]
name = "topos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for Topos"

[[bin]]
name = "topos"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
topos-lsp = { path = "../topos-lsp" }
topos-mcp = { path = "../topos-mcp" }
topos-analysis = { path = "../topos-analysis" }
topos-context = { path = "../topos-context" }
topos-diff = { path = "../topos-diff" }
topos-syntax = { path = "../topos-syntax" }
anyhow.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
serde_json = "1.0"
git2 = "0.19"
glob = "0.3"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile = "3.10"
