[package]
name = "topos-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AI context generation for Topos"

[dependencies]
topos-analysis = { path = "../topos-analysis" }
topos-syntax = { path = "../topos-syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
