[package]
name = "topos-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Semantic diffing for Topos specs"

[dependencies]
facet.workspace = true
topos-syntax = { path = "../topos-syntax" }
topos-mcp = { path = "../topos-mcp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["rt"] }
