[package]
name = "topos-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LSP server for Topos"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
topos-analysis = { path = "../topos-analysis" }
lsp-types.workspace = true