[package]
name = "topos-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for Topos"

[dependencies]
rmcp = { version = "0.12", features = ["server", "client", "macros", "transport-io"] }
tokio.workspace = true
topos-analysis = { path = "../topos-analysis" }
topos-context = { path = "../topos-context" }
topos-syntax = { path = "../topos-syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
tracing = "0.1"
thiserror = "2.0"
glob = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3.10"
